Table user {
  id text [pk]
  name text
  email text [unique]
  email_verified boolean [not null]
  image text
  status text [not null]
  last_login_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  Note: '논리명: 사용자'
}

Table session {
  id text [pk]
  expires_at timestamptz [not null]
  client_type text
  last_seen_at timestamptz
  absolute_expires_at timestamptz
  token text [not null, unique]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  ip_address text
  user_agent text
  user_id text [not null]
  Note: '논리명: 세션'
}

Table account {
  id text [pk]
  account_id text [not null]
  provider_id text [not null]
  user_id text [not null]
  access_token text
  refresh_token text
  id_token text
  access_token_expires_at timestamptz
  refresh_token_expires_at timestamptz
  scope text
  password text
  provider_email text
  provider_email_verified boolean [not null]
  last_login_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (provider_id, account_id) [unique]
    (user_id, provider_id) [unique]
  }

  Note: '논리명: 연동 계정'
}

Table verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamptz [not null]
  created_at timestamptz
  updated_at timestamptz
  Note: '논리명: 인증 토큰'
}

Table user_preference_profiles {
  user_id text [pk]
  exploration_preference text [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  Note: '논리명: 사용자 취향 프로필'
}

Table destination_profiles {
  id text [pk]
  slug text [not null, unique]
  kind text [not null]
  country_code text [not null]
  name_ko text [not null]
  name_en text [not null]
  budget_band text [not null]
  flight_band text [not null]
  best_months jsonb [not null]
  pace_tags jsonb [not null]
  vibe_tags jsonb [not null]
  summary text [not null]
  watch_outs jsonb [not null]
  active boolean [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  Note: '논리명: 여행지 마스터'
}

Table trend_snapshots {
  id text [pk]
  destination_id text [not null]
  tier text [not null]
  source_type text [not null]
  source_label text [not null]
  source_url text [not null]
  observed_at timestamptz [not null]
  freshness_state text [not null]
  confidence integer [not null]
  summary text [not null]
  payload jsonb [not null]
  created_at timestamptz [not null]
  Note: '논리명: 트렌드 스냅샷'
}

Table scoring_versions {
  id text [pk]
  label text [not null]
  active boolean [not null]
  weights jsonb [not null]
  tie_breaker_cap integer [not null]
  shoulder_window_months integer [not null]
  created_at timestamptz [not null]
  Note: '논리명: 점수 버전'
}

Table recommendation_snapshots {
  id uuid [pk]
  kind text [not null]
  visibility text [not null]
  owner_user_id text
  snapshot_version integer [not null]
  query jsonb
  payload jsonb [not null]
  scoring_version_id text
  trend_snapshot_ids jsonb [not null]
  destination_ids jsonb [not null]
  created_at timestamptz [not null]
  Note: '논리명: 추천 결과 스냅샷'
}

Table user_destination_history {
  id uuid [pk]
  user_id text [not null]
  destination_id text [not null]
  rating integer [not null]
  tags jsonb [not null]
  custom_tags jsonb [not null]
  would_revisit boolean [not null]
  visited_at timestamptz [not null]
  memo text
  images jsonb
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  Note: '논리명: 사용자 여행 기록'
}

Table user_future_trips {
  id uuid [pk]
  user_id text [not null]
  destination_id text [not null]
  source_snapshot_id uuid [not null, note: '물리 FK 없음, recommendation_snapshots.id 의미 참조']
  destination_name_ko text [not null]
  country_code text [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (user_id, destination_id) [unique]
  }

  Note: '논리명: 사용자 예정 여행'
}

Table destination_affiliate_clicks {
  id uuid [pk]
  destination_id text [not null]
  partner text [not null]
  category text [not null]
  page_type text [not null]
  departure_airport text
  travel_month integer
  trip_length_days integer
  flight_tolerance text
  user_id text
  session_id text
  clicked_at timestamptz [not null]
  Note: '논리명: 제휴 클릭 로그'
}

Ref: session.user_id > user.id
Ref: account.user_id > user.id
Ref: user_preference_profiles.user_id - user.id
Ref: recommendation_snapshots.owner_user_id > user.id
Ref: recommendation_snapshots.scoring_version_id > scoring_versions.id
Ref: trend_snapshots.destination_id > destination_profiles.id
Ref: user_destination_history.user_id > user.id
Ref: user_destination_history.destination_id > destination_profiles.id
Ref: user_future_trips.user_id > user.id
Ref: user_future_trips.destination_id > destination_profiles.id
Ref: destination_affiliate_clicks.destination_id > destination_profiles.id
Ref: destination_affiliate_clicks.user_id > user.id
